2012-08-22  Jeff Kenton  <jkenton@tilera.com>

	* eblopenbackend.c (machines): Add tilegx.

2011-06-26  Mark Wielaard  <mjw@redhat.com>

	* eblopenbackend.c (default_debugscn_p): Add .debug_macro.

2011-04-26  Mark Wielaard  <mjw@redhat.com>

	* libebl.h (ebl_object_note_type_name): Add const char *name arg.
	* eblhooks.h (object_note_type_name): Likewise.
	* eblopenbackend.c (default_object_note_type_name): Likewise.
	* eblobjnotetypename.c (ebl_object_note_type_name): Likewise.
	And print version if name is "stapsdt".
	* eblobjnote.c (ebl_object_note): Add output for "stapsdt" notes.

2011-03-21  Marek Polacek  <mpolacek@redhat.com>

	* ebldynamictagname.c: Fix typo in TLSDESC_GOT.

2011-03-10  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (gen_SOURCES): Add eblstother.c.
	* eblstother.c: New file.
	* ebl-hooks.h: Add check_st_other_bits hook.
	* eblopenbackend.c (default_check_st_other_bits): New function.
	(fill_defaults): Hook default_check_st_other_bits.
	* libebl.h (ebl_check_st_other_bits): New prototype.

2010-07-07  Roland McGrath  <roland@redhat.com>

	* eblopenbackend.c (default_debugscn_p): Match .gdb_index section.

2010-02-15  Roland McGrath  <roland@redhat.com>

	* Makefile.am: Use config/eu.am for common stuff.

2010-01-04  Roland McGrath  <roland@redhat.com>

	* eblcorenote.c (ebl_core_note): Take GElf_Nhdr * and name data
	pointer instead of only n_type and n_descsz.
	* libebl.h: Update declaration.
	* ebl-hooks.h: Update core_note hook signature.
	* eblopenbackend.c (default_core_note): Likewise.

2009-10-14  Roland McGrath  <roland@redhat.com>

	* eblobjnote.c (ebl_object_note): Clean up NT_GNU_GOLD_VERSION printing.

2009-10-05  Roland McGrath  <roland@redhat.com>

	* eblopenbackend.c (default_debugscn_p): Match .debug_pubtypes and
	.debug_types too.

2009-09-02  Petr Machata  <pmachata@redhat.com>

	* libebl/eblstrtab.c (morememory): Allocate memory in multiples of
	pagesize.

2009-08-06  Petr Machata  <pmachata@redhat.com>
